--- a/bogenliga/src/app/components/navbar/navbar.component.scss
+++ b/bogenliga/src/app/components/navbar/navbar.component.scss
@@ -1,12 +1,6 @@
 /* Farbkonzept Website */
-$hero-blue: #487AF5; //Title H2, visual accent elements
-$primary-black: #2A2A2A; // Most Texts, Primary Buttons
-$primary-white: #FCFCFC; //Background
-$dark-gray: #888888; // Subtitle, Inactive Buttons
-$light-gray: #EAEAEF; //Secondary Buttons
-$accent-gold: #FFCC34; //Help, Tooltip, Link to Help
-$accent-red: #F40E0E; //Destructive Actions, Delete Buttons
-$true-white: #ffffff; //Navbar & Header Background
+
+@import 'src/styles.scss';
 
 #navbar {
   height: 3.2em;
